--- a/titanic-ensemble-exploration.ipynb
+++ b/titanic-ensemble-exploration.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "4      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
        "max      6.000000  512.329200  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1171,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1353,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1370,7 +1370,7 @@
        "Name: Parch, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1382,7 +1382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1671,7 +1671,7 @@
        "[5 rows x 800 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1909,7 +1909,7 @@
        "[5 rows x 1059 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,7 +1978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1997,14 +1997,14 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    1.9s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    1.8s\n",
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    2.7s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    2.8s remaining:    2.8s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    2.8s remaining:    1.7s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    3.9s remaining:    1.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    3.9s remaining:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    4.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    4.0s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    4.0s remaining:    0.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    4.1s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    4.1s finished\n"
      ]
     },
     {
@@ -2051,11 +2051,11 @@
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.4s\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.5s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.5s remaining:    1.5s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.5s remaining:    0.9s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    2.6s remaining:    0.9s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    2.6s remaining:    0.4s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    2.7s remaining:    0.4s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    2.7s remaining:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    2.7s finished\n"
      ]
@@ -2137,7 +2137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -2175,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -2194,14 +2194,15 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    0.4s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    0.5s remaining:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    0.6s remaining:    0.4s\n",
+      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    0.5s remaining:    0.3s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    0.7s remaining:    0.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    0.8s remaining:    0.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    0.8s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    0.8s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    0.7s remaining:    0.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    0.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    0.7s finished\n",
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n"
      ]
     },
     {
@@ -2246,8 +2247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.1996s.) Setting batch_size=2.\n",
+      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.1779s.) Setting batch_size=2.\n",
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.2s\n",
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    0.4s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    0.4s remaining:    0.4s\n",
@@ -2341,7 +2341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -2379,7 +2379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -2398,14 +2398,14 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.5s\n",
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.2s remaining:    1.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.2s remaining:    0.7s\n",
-      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    1.7s remaining:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.7s remaining:    0.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.8s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.8s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.1s remaining:    1.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.1s remaining:    0.7s\n",
+      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    1.6s remaining:    0.5s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.6s remaining:    0.2s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s finished\n"
      ]
     },
     {
@@ -2452,13 +2452,13 @@
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.6s\n",
-      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.2s remaining:    1.2s\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.1s remaining:    1.1s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.2s remaining:    0.7s\n",
-      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    1.7s remaining:    0.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    1.6s remaining:    0.5s\n",
       "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.7s remaining:    0.2s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.8s remaining:    0.0s\n",
-      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.8s finished\n"
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s remaining:    0.0s\n",
+      "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s finished\n"
      ]
     },
     {
@@ -2538,7 +2538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -2583,7 +2583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -2620,7 +2620,7 @@
        "                 weights=None)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
