End of day check-in

--- a/titanic-ensemble-pipeline.ipynb
+++ b/titanic-ensemble-pipeline.ipynb
@@ -1,11 +1,62 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Imports"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import boto3\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import warnings\n",
+    "import sagemaker\n",
+    "import re\n",
+    "\n",
+    "from sagemaker import get_execution_role\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.model_selection import StratifiedShuffleSplit, GridSearchCV, KFold\n",
+    "from sklearn.preprocessing import Normalizer, OneHotEncoder, StandardScaler, OrdinalEncoder\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report\n",
+    "from sklearn.preprocessing import KBinsDiscretizer\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.linear_model import LogisticRegression\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Environment Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BUCKET = 'bf-titanic-data'\n",
+    "PREFIX = 'titanic-scikit-pipeline'\n",
+    "WORK_DIRECTORY = 'titanic_data'\n",
+    "TRAIN_KEY = 'train.csv'\n",
+    "train_path = 's3://{}/{}'.format(BUCKET, train_key)\n",
+    "\n",
+    "sagemaker_session = sagemaker.Session()\n",
+    "role = get_execution_role()"
+   ]
   }
  ],
  "metadata": {
