--- a/titanic-ensemble-exploration.ipynb
+++ b/titanic-ensemble-exploration.ipynb
@@ -2002,7 +2002,7 @@
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    2.8s remaining:    2.8s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    2.8s remaining:    1.7s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    3.9s remaining:    1.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    4.0s remaining:    0.6s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    3.9s remaining:    0.6s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    4.1s remaining:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    4.1s finished\n"
      ]
@@ -2054,7 +2054,7 @@
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.5s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.5s remaining:    1.5s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.5s remaining:    0.9s\n",
-      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    2.6s remaining:    0.9s\n",
+      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    2.7s remaining:    0.9s\n",
       "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    2.7s remaining:    0.4s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    2.7s remaining:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    2.7s finished\n"
@@ -2195,7 +2195,7 @@
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    0.4s\n",
+      "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    0.5s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    0.5s remaining:    0.5s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    0.5s remaining:    0.3s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    0.7s remaining:    0.2s\n",
@@ -2247,12 +2247,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.1779s.) Setting batch_size=2.\n",
+      "[Parallel(n_jobs=-1)]: Batch computation too fast (0.1428s.) Setting batch_size=2.\n",
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.2s\n",
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    0.4s\n",
-      "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    0.4s remaining:    0.4s\n",
-      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    0.5s remaining:    0.3s\n",
-      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    0.6s remaining:    0.2s\n"
+      "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    0.5s remaining:    0.5s\n",
+      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    0.5s remaining:    0.3s\n"
      ]
     },
     {
@@ -2292,6 +2291,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    0.7s remaining:    0.2s\n",
       "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    0.7s remaining:    0.1s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    0.7s remaining:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    0.7s finished\n"
@@ -2398,12 +2398,12 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.6s\n",
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.1s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.1s remaining:    1.1s\n",
       "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.1s remaining:    0.7s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    1.6s remaining:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.6s remaining:    0.2s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.7s remaining:    0.2s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s remaining:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s finished\n"
      ]
@@ -2454,9 +2454,9 @@
       "[Parallel(n_jobs=-1)]: Done   2 tasks      | elapsed:    0.6s\n",
       "[Parallel(n_jobs=-1)]: Done   9 tasks      | elapsed:    1.1s\n",
       "[Parallel(n_jobs=-1)]: Done  12 out of  24 | elapsed:    1.1s remaining:    1.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.2s remaining:    0.7s\n",
+      "[Parallel(n_jobs=-1)]: Done  15 out of  24 | elapsed:    1.1s remaining:    0.7s\n",
       "[Parallel(n_jobs=-1)]: Done  18 out of  24 | elapsed:    1.6s remaining:    0.5s\n",
-      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.7s remaining:    0.2s\n",
+      "[Parallel(n_jobs=-1)]: Done  21 out of  24 | elapsed:    1.6s remaining:    0.2s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s remaining:    0.0s\n",
       "[Parallel(n_jobs=-1)]: Done  24 out of  24 | elapsed:    1.7s finished\n"
      ]
@@ -2585,46 +2585,7 @@
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "VotingClassifier(estimators=[('rf',\n",
-       "                              RandomForestClassifier(bootstrap=True,\n",
-       "                                                     ccp_alpha=0.0,\n",
-       "                                                     class_weight=None,\n",
-       "                                                     criterion='gini',\n",
-       "                                                     max_depth=None,\n",
-       "                                                     max_features='auto',\n",
-       "                                                     max_leaf_nodes=None,\n",
-       "                                                     max_samples=None,\n",
-       "                                                     min_impurity_decrease=0.0,\n",
-       "                                                     min_impurity_split=None,\n",
-       "                                                     min_samples_leaf=1,\n",
-       "                                                     min_samples_split=2,\n",
-       "                                                     min_weight_fraction_leaf=0.0,\n",
-       "                                                     n_estimators=150,\n",
-       "                                                     n_jobs=None,\n",
-       "                                                     oob_score...\n",
-       "                                                 random_state=37,\n",
-       "                                                 solver='lbfgs', tol=0.0001,\n",
-       "                                                 verbose=0, warm_start=False)),\n",
-       "                             ('svc',\n",
-       "                              SVC(C=3, break_ties=False, cache_size=200,\n",
-       "                                  class_weight=None, coef0=0.0,\n",
-       "                                  decision_function_shape='ovr', degree=3,\n",
-       "                                  gamma='scale', kernel='rbf', max_iter=-1,\n",
-       "                                  probability=True, random_state=37,\n",
-       "                                  shrinking=True, tol=0.001, verbose=False))],\n",
-       "                 flatten_transform=True, n_jobs=None, voting='soft',\n",
-       "                 weights=None)"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = pd.concat([X_train_eng, X_val_eng])\n",
     "y_train = pd.concat([y_train, y_val])\n",
@@ -2640,8 +2601,16 @@
     "                                                  probability=True))\n",
     "                             ],\n",
     "                             voting='soft')\n",
-    "voting_clf.fit(train_data, y_train)"
+    "voting_clf.fit(train_data, y_train)\n",
+    "y_pred_test = voting_clf.predict(X_test_eng)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
