Modifications to featurizer

--- a/titanic-ensemble-pipeline.ipynb
+++ b/titanic-ensemble-pipeline.ipynb
@@ -14,11 +14,8 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "import sagemaker\n",
     "import pickle\n",
-    "import re\n",
     "\n",
     "from time import gmtime, strftime\n",
     "\n",
@@ -28,12 +25,11 @@
     "from sagemaker.sklearn.estimator import SKLearn\n",
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
-    "from sklearn.preprocessing import Normalizer, OneHotEncoder, StandardScaler, OrdinalEncoder\n",
     "from sklearn.preprocessing import KBinsDiscretizer\n",
     "\n",
-    "from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression"
+    "#from sklearn.ensemble import RandomForestClassifier, VotingClassifier\n",
+    "#from sklearn.svm import SVC\n",
+    "#from sklearn.linear_model import LogisticRegression"
    ]
   },
   {
@@ -74,6 +70,22 @@
     "obj = s3.Object(BUCKET, 'v1/model/trained_model.pickle')\n",
     "body = obj.get()['Body'].read()\n",
     "inference_model = pickle.loads(body)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name = 'inference-pipeline-' + timestamp_prefix\n",
+    "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
+    "prod_model = PipelineModel(\n",
+    "    name=model_name, \n",
+    "    role=role, \n",
+    "    models=inference_model)\n",
+    "\n",
+    "sm_model.deploy(initial_instance_count=1, instance_type='ml.c4.xlarge', endpoint_name=endpoint_name)"
    ]
   }
  ],
