Continuing work on pipeline

--- a/titanic-pipeline.ipynb
+++ b/titanic-pipeline.ipynb
@@ -23,6 +23,7 @@
     "from sagemaker.model import Model\n",
     "from sagemaker.pipeline import PipelineModel\n",
     "from sagemaker.sklearn.estimator import SKLearn\n",
+    "from sagemaker.amazon.amazon_estimator import get_image_uri\n",
     "\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "from sklearn.preprocessing import KBinsDiscretizer\n",
@@ -56,6 +57,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Endpoint Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preprocess input data\n",
+    "def predict_fn(input_data, model):\n",
+    "    \n",
+    "    features = model.transform(input_data)\n",
+    "\n",
+    "    if label_column in input_data:\n",
+    "        # Return the label (as the first column) and the set of features.\n",
+    "        return np.insert(features, 0, input_data[label_column], axis=1)\n",
+    "    else:\n",
+    "        # Return only the set of features\n",
+    "        return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Deserialize fitted model\n",
+    "def model_fn(model_dir):\n",
+    "    preprocessor = joblib.load(os.path.join(model_dir, \"model.joblib\"))\n",
+    "    return preprocessor"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Create Inference Pipeline"
    ]
   },
@@ -82,11 +121,44 @@
     "endpoint_name = 'inference-pipeline-ep-' + timestamp_prefix\n",
     "prod_model = PipelineModel(\n",
     "    name=model_name, \n",
-    "    role=role, \n",
+    "    role=role,\n",
+    "    train_instance_type=\"ml.c4.xlarge\",\n",
     "    models=inference_model)\n",
     "\n",
-    "sm_model.deploy(initial_instance_count=1, instance_type='ml.c4.xlarge', endpoint_name=endpoint_name)"
+    "sklearn_preprocessor.fit({'train': train_input})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Batch Transform Training Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define a SKLearn Transformer from the trained SKLearn Estimator\n",
+    "transformer = sklearn_preprocessor.transformer(\n",
+    "    instance_count=1, \n",
+    "    instance_type='ml.m4.xlarge',\n",
+    "    assemble_with = 'Line',\n",
+    "    accept = 'text/csv')\n",
+    "\n",
+    "# Preprocess training input\n",
+    "transformer.transform(train_input, content_type='text/csv')\n",
+    "print('Waiting for transform job: ' + transformer.latest_transform_job.job_name)\n",
+    "transformer.wait()\n",
+    "preprocessed_train = transformer.output_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
